# mcp-server-gemini-image-generator

./: .env.example  Dockerfile  README.md  pyproject.toml  tmp_fastmcp.json  tmp_fastmcp_readme.md
.claude/: settings.local.json
src/gemini_image_mcp/: prompts.py  server.py
src/mcp_server_gemini_image_generator/: server.py
