[project]
name = "gemini-image-mcp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sungmin Koo",email = "sungmin.koo@nhn-playart.com"}]
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.9",
    "google>=3.0.0",
    "google-genai>=1.7.0",
    "pillow>=11.1.0",
]

[project.scripts]
gemini-image-mcp = "gemini_image_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_image_mcp"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
